--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "classnames": "^2.2.1",
     "date-fns": "2.0.0-alpha.7",
     "prop-types": "^15.5.10",
-    "react-list": "^0.8.8"
+    "react-list": "^0.8.8",
+    "precss": "^2.0.0",
+    "postcss-import": "^11.0.0"
   },
   "peerDependencies": {
     "react": "^0.14 || ^15.0.0-rc || >=15.0"
@@ -64,9 +66,7 @@
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.1.4",
     "normalize.css": "^7.0.0",
-    "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.10",
-    "precss": "^2.0.0",
     "prettier": "^1.9.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
